--- a/src/components/movie-view/movie-view.scss
+++ b/src/components/movie-view/movie-view.scss
@@ -1,4 +1,8 @@
 .movie-border {
 	text-align: center;
-	margin: 50px;
+	position: absolute;
+	left: 50%;
+	top: 100%;
+	transform: translate(-50%, -50%);
+	padding: 10px;
 }
