--- a/src/components/director-view/director-view.scss
+++ b/src/components/director-view/director-view.scss
@@ -1,8 +1,7 @@
 .director-view {
-	text-align: center;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-	padding: 10px;
+	margin: auto;
+	margin-top: 20px;
+	align-items: center;
+	justify-content: center;
+	display: flex;
 }
