--- a/src/components/registration-view/registration-view.scss
+++ b/src/components/registration-view/registration-view.scss
@@ -1,4 +1,6 @@
 .registration-form {
-	margin: 50px;
-	padding: 60px;
+	width: 30rem;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 50px;
 }
